Added switches to comparison tab

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="script/noUiSlider/nouislider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <link rel="stylesheet" type="text/css" href="smog_switches.css">
+    <link rel="stylesheet" type="text/css" href="comp_switches.css">
     <style>
         .switch label input[type=checkbox]#checkTemperature:checked + .lever {
             background-color: rgba(230, 81, 0, 0.5);
@@ -168,6 +169,77 @@
                     <div class="col s9">
                         <h5>Porównanie wyników</h5>
                         <canvas id="smogChartComparison" width="950%" height="350"></canvas>
+                    </div>
+                    <div class="col s3">
+                        <div class="row">
+                            <div class="col s6">
+                                <div class="switch">
+                                    <label>
+                                        Pm 10
+                                        <input checked type="checkbox" id="Pm10Switch">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 1
+                                        <input type="checkbox" id="model_1">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 2
+                                        <input type="checkbox" id="model_2">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 3
+                                        <input type="checkbox" id="model_3">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 4
+                                        <input type="checkbox" id="model_4">
+                                        <span class="lever"></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col s6">
+                                <div class="switch">
+                                    <label>
+                                        Model 5
+                                        <input type="checkbox" id="model_5">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 6
+                                        <input type="checkbox" id="model_6">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                    <label>
+                                        Model 7<br>
+                                        <input type="checkbox" id="model_7">
+                                        <span class="lever"></span>
+                                        <br>
+                                    </label>
+                                    <label>
+                                        Model 8<br>
+                                        <input type="checkbox" id="model_8">
+                                        <span class="lever"></span>
+                                        <br>
+                                    </label>
+                                    <label>
+                                        Model 9<br>
+                                        <input type="checkbox" id="model_9">
+                                        <span class="lever"></span>
+                                    </label>
+                                    <br>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
