--- a/public/index.html
+++ b/public/index.html
@@ -192,6 +192,11 @@
                                         <span class="lever"></span>
                                     </label>
                                     <br>
+
+                                </div>
+                            </div>
+                            <div class="col s6">
+                                <div class="switch">
                                     <label>
                                         Model 3
                                         <input type="checkbox" id="model_3">
@@ -203,40 +208,36 @@
                                         <input type="checkbox" id="model_4">
                                         <span class="lever"></span>
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="switch">
                                     <label>
                                         Model 5
                                         <input type="checkbox" id="model_5">
                                         <span class="lever"></span>
                                     </label>
                                     <br>
-                                    <label>
-                                        Model 6
-                                        <input type="checkbox" id="model_6">
-                                        <span class="lever"></span>
-                                    </label>
-                                    <br>
-                                    <label>
-                                        Model 7<br>
-                                        <input type="checkbox" id="model_7">
-                                        <span class="lever"></span>
-                                        <br>
-                                    </label>
-                                    <label>
-                                        Model 8<br>
-                                        <input type="checkbox" id="model_8">
-                                        <span class="lever"></span>
-                                        <br>
-                                    </label>
-                                    <label>
-                                        Model 9<br>
-                                        <input type="checkbox" id="model_9">
-                                        <span class="lever"></span>
-                                    </label>
-                                    <br>
+                                    <!--<label>-->
+                                        <!--Model 6-->
+                                        <!--<input type="checkbox" id="model_6">-->
+                                        <!--<span class="lever"></span>-->
+                                    <!--</label>-->
+                                    <!--<br>-->
+                                    <!--<label>-->
+                                        <!--Model 7<br>-->
+                                        <!--<input type="checkbox" id="model_7">-->
+                                        <!--<span class="lever"></span>-->
+                                        <!--<br>-->
+                                    <!--</label>-->
+                                    <!--<label>-->
+                                        <!--Model 8<br>-->
+                                        <!--<input type="checkbox" id="model_8">-->
+                                        <!--<span class="lever"></span>-->
+                                        <!--<br>-->
+                                    <!--</label>-->
+                                    <!--<label>-->
+                                        <!--Model 9<br>-->
+                                        <!--<input type="checkbox" id="model_9">-->
+                                        <!--<span class="lever"></span>-->
+                                    <!--</label>-->
+                                    <!--<br>-->
                                 </div>
                             </div>
                         </div>
@@ -808,7 +809,7 @@
                     document.getElementById('from-date'),
                     document.getElementById('to-date')
                 ];
-                
+
                 $('ul.tabs li:eq(0)').on('click', 'a', function(e) {
                     document.getElementById('date-time').style.visibility = 'visible';
                     document.getElementById('date').style.visibility = 'visible';
