--- a/public/index.html
+++ b/public/index.html
@@ -172,74 +172,74 @@
                     </div>
                     <div class="col s3">
                         <div class="row">
-                            <div class="col s6">
+                            <div class="col s12">
                                 <div class="switch">
                                     <label>
-                                        Pm 10
                                         <input checked type="checkbox" id="Pm10Switch">
                                         <span class="lever"></span>
+                                        Pm 10
                                     </label>
                                     <br>
                                     <label>
-                                        Model 1
                                         <input type="checkbox" id="model_1">
                                         <span class="lever"></span>
+                                        Weather + Date
                                     </label>
                                     <br>
                                     <label>
-                                        Model 2
                                         <input type="checkbox" id="model_2">
                                         <span class="lever"></span>
+                                        Weather + Hot-encoded Date
                                     </label>
                                     <br>
-
-                                </div>
-                            </div>
-                            <div class="col s6">
-                                <div class="switch">
                                     <label>
-                                        Model 3
                                         <input type="checkbox" id="model_3">
                                         <span class="lever"></span>
+                                        Weather + Sin-Cos-encoded Date
                                     </label>
                                     <br>
                                     <label>
-                                        Model 4
                                         <input type="checkbox" id="model_4">
                                         <span class="lever"></span>
+                                        Weather + Hot-Sin-Cos-encoded Date
                                     </label>
                                     <label>
-                                        Model 5
                                         <input type="checkbox" id="model_5">
                                         <span class="lever"></span>
+                                        Previous day data
                                     </label>
-                                    <br>
-                                    <!--<label>-->
-                                        <!--Model 6-->
-                                        <!--<input type="checkbox" id="model_6">-->
-                                        <!--<span class="lever"></span>-->
-                                    <!--</label>-->
-                                    <!--<br>-->
-                                    <!--<label>-->
-                                        <!--Model 7<br>-->
-                                        <!--<input type="checkbox" id="model_7">-->
-                                        <!--<span class="lever"></span>-->
-                                        <!--<br>-->
-                                    <!--</label>-->
-                                    <!--<label>-->
-                                        <!--Model 8<br>-->
-                                        <!--<input type="checkbox" id="model_8">-->
-                                        <!--<span class="lever"></span>-->
-                                        <!--<br>-->
-                                    <!--</label>-->
-                                    <!--<label>-->
-                                        <!--Model 9<br>-->
-                                        <!--<input type="checkbox" id="model_9">-->
-                                        <!--<span class="lever"></span>-->
-                                    <!--</label>-->
-                                    <!--<br>-->
                                 </div>
                             </div>
+                            <!--<div class="col s6">-->
+                                <!--<div class="switch">-->
+                                    <!---->
+                                    <!--<br>-->
+                                    <!--&lt;!&ndash;<label>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;Model 6&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<input type="checkbox" id="model_6">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<span class="lever"></span>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</label>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<br>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<label>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;Model 7<br>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<input type="checkbox" id="model_7">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<span class="lever"></span>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<br>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</label>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<label>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;Model 8<br>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<input type="checkbox" id="model_8">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<span class="lever"></span>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<br>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</label>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<label>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;Model 9<br>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<input type="checkbox" id="model_9">&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<span class="lever"></span>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</label>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<br>&ndash;&gt;-->
+                                <!--</div>-->
+                            <!--</div>-->
                         </div>
                     </div>
                 </div>
